--- a/speakers/sampson.html
+++ b/speakers/sampson.html
@@ -73,7 +73,7 @@
 		</aside>
 	</main>
 	<footer>
-		<p>&copy; 2022, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
+		<p>&copy; Terrone, 2022</p>
 	</footer>
 </body>
 </html>
